--- a/main.css
+++ b/main.css
@@ -16,5 +16,21 @@ h1 h2 h3 h4 h5 h6 {
   }
 .wrapper
 {
+    display: flex;
     justify-content: center;
+    flex-direction: row-reverse;
+}
+.sidebar
+{
+    background-color: #ded6c8;
+    padding: 15px;
+}
+.mypic
+{
+    height: 405px;
+    width: 270px;
+}
+hr
+{
+    padding-top: -10px;
 }
