--- a/main.css
+++ b/main.css
@@ -23,11 +23,11 @@ h1 h2 h3 h4 h5 h6 {
 .sidebar
 {
     background-color: #ded6c8;
-    padding: 15px;
+    padding: 25px;
 }
 .mypic
 {
-    height: 405px;
+    height: 425px;
     width: 270px;
 }
 hr
@@ -48,7 +48,24 @@ hr
 {
     line-height: 34px;
 }
-.main
+.rs-logo
 {
-    padding: 15px;
+    margin-top: 90px;
+}
+.main-content
+{
+    padding-top: 25px;
+    padding-left: 40px;
+    padding-right: 40px;
+    background-color: #e3f8fc;
+}
+.about-myself
+{
+    line-height: 20px;
+}
+.main-content hr
+{
+    margin-top:35px;
+    margin-left: 0px;
+    width: 569px;
 }
